--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-h3 {
- font-family: Georgia, serif;
-  text-transform: uppercase;
-  color: blue;
+.main {
+ margin: 10px 200px;
+ border: solid 2px black;
+ border-radius: 10px;
 }
 .header {
  position: fixed;
