Changed name font size

--- a/style.css
+++ b/style.css
@@ -9,12 +9,13 @@
 .header {
  position: fixed;
  background-color: rgb(118, 165, 235);
- width: 600px;
+ width: 1000px;
  z-index: 1000;
 }
 
 .name {
  font-family: "Architects Daughter", sans-serif;
+ font-size: 50px;
 }
 
 .contact {
