--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
 
 .contact {
  font-size: 24px;
+ text-align: center;
 }
 
 .education {
@@ -27,7 +28,7 @@
 }
 
 .workplace, .duration {
- display: inline;
+ display: block;
 }
 
 .workplace {
