Changed header position

--- a/style.css
+++ b/style.css
@@ -1,16 +1,15 @@
 
 .content {
- margin: 200px 200px 10px 200px;
+ margin: 10px 200px 10px 200px;
  border: solid 2px black;
  border-radius: 20px;
  background-color: rgb(172, 239, 242);
 }
 
 .header {
- position: fixed;
  background-color: rgb(118, 165, 235);
  margin: 10px 200px 0 200px;
- z-index: 1000;
+ border-radius: 20px;
 }
 
 .name {
