--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 .content {
  padding: 150px 10px 10px 10px;
+ margin: 10px 200px;
  border: solid 2px rgb(65, 69, 113);
  background-color: rgb(206, 208, 227);
 }
@@ -36,7 +37,9 @@
 }
 
 img {
-border-radius: 100% 
+ border-radius: 100%;
+ display: block;
+ 
 }
 
 p li {
