--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ img {
 p li {
  font-size: 18px;
  line-height: 22px;
+ font-family: "PT Serif", serif;
 }
 
 .experience-line {
@@ -68,5 +69,6 @@ p li {
 }
 
 .position {
- font-style: italic;
+ font-style: oblique;
+ 
 }
