--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ img {
  font-size: 22px;
  border-bottom: 1px solid rgb(65, 69, 113);
  line-height: 26px;
+ text-transform: uppercase;
 }
 
 p li {
