--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ img {
 p li {
  font-size: 18px;
  line-height: 22px;
- font-family: "Arial", sans-serif;
+ font-family: 'PT Serif', serif;
 }
 
 .experience-line {
