--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 }
 
 .header {
-  background-color: rgb(194,168,198);
+  background-color: rgb(194, 194, 194);
   border-bottom: 2px solid rgb(40,102,82);
   display: flex;
    justify-content: space-around;
