--- a/style.css
+++ b/style.css
@@ -34,13 +34,13 @@
 }
 
 .name {
- font-family: "Architects Daughter", sans-serif;
+ font-family: "PT serif", serif;
  font-size: 50px;
  line-height: .3em;
 }
 
 .contact {
- font-family: "Architects Daughter", sans-serif;
+ font-family: "PT serif", serif;
  font-size: 24px;
  line-height: .5em;
 }
@@ -100,9 +100,14 @@ margin: 0px;
  padding: 0px;
 }
 
-.flex {
+.flex1 {
  display: flex;
  justify-content: space-around;
+}
+
+.flex2 {
+ display: flex;
+ justify-content: flex-start;
 }
 
 .skills {
