--- a/style.css
+++ b/style.css
@@ -34,13 +34,13 @@
 }
 
 .name {
- font-family: "PT serif", serif;
+ font-family: "Architects Daughter", serif;
  font-size: 50px;
  line-height: .3em;
 }
 
 .contact {
- font-family: "PT serif", serif;
+ font-family: "Architects Daughter", serif;
  font-size: 24px;
  line-height: .5em;
 }
