--- a/style.css
+++ b/style.css
@@ -50,6 +50,13 @@ img {
  border: 1px solid rgb(40,102,82);
 }
 
+.objective {
+ font-size: 20px;
+ border-bottom: 1px solid rgb(40,102,82);
+ text-align: center;
+ line-height: 24px;
+}
+
 .heading {
  font-size: 24px;
  border-bottom: 1px solid rgb(40,102,82);
